--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=voting
+server.servlet.context-path=/
 
-# ?????
 spring.datasource.url=jdbc:sqlite:db/voting
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
 
-# Hibernate ??
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
+spring.jpa.open-in-view=true
+
+spring.datasource.druid.validation-query=select 1
